--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,12 @@
 version: 2.1
 orbs:
   ruby: circleci/ruby@0.1.2 
-
-jobs:
-  build:
+executors:
+  default:
     docker:
       - image: circleci/ruby:2.6.3-stretch-node
+jobs:
+  build:
     executor: default
     steps:
       - checkout
