--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,9 @@ jobs:
     steps:
       - checkout
       - run:
+          name: install bundler
+          command: gem install bundler:2.1.0
+      - run:
           name: Which bundler?
           command: bundle -v
       - ruby/bundle-install
