--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,6 +53,10 @@ jobs:
               --out /tmp/test-results/rspec.html \
               --format progress \
               $TEST_FILES
+      # run rubocop!
+      - run:
+          name: run rubocop
+          command: bundle exec rubocop
       # collect reports
       - store_test_results:
           path: /tmp/test-results
