--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,15 +1,62 @@
 AllCops:
-  TargetRubyVersion: 2.6
   Exclude:
-    - bin/*
-    - db/schema.rb
-    - db/migrate/*
-    - vendor/**/*
-    - config/**/*
-    - lib/tasks/*
-    - Gemfile
-    - features/**/*
-    - spec/**/*
+    - 'vendor/**/*'
+    - 'db/**/*'
+    - 'bin/**/*'
+    - 'spec/**/*'
+    - 'node_modules/**/*'
+  DisplayCopNames: true
+Rails:
+  Enabled: true
+
+Rails/Output:
+  Exclude:
+    - 'config/unicorn/**/*'
+    -
+Layout/MultilineBlockLayout:
+  Exclude:
+    - 'spec/**/*_spec.rb'
+
+Metrics/AbcSize:
+  Max: 25
+
+Metrics/BlockLength:
+  Max: 30
+  Exclude:
+    - 'Gemfile'
+    - 'config/**/*'
+    - 'spec/**/*_spec.rb'
+
+Metrics/ClassLength:
+  CountComments: false
+  Max: 300
+
+Metrics/CyclomaticComplexity:
+  Max: 30
+
+Metrics/LineLength:
+  Enabled: false
+
+Metrics/MethodLength:
+  CountComments: false
+  Max: 30
+
+Naming/AccessorMethodName:
+  Exclude:
+    - 'app/controllers/**/*'
+
+NumericLiterals:
+  Enabled: false
+
+Style/AsciiComments:
+  Enabled: false
+
+Styl/BlockDelimiters:
+  Exclude:
+    - 'spec/**/*_spec.rb'
+
+Style/ClassAndModuleChildren:
+  Enabled: false
 
 Style/Documentation:
   Enabled: false
@@ -17,65 +64,18 @@ Style/Documentation:
 Style/FrozenStringLiteralComment:
   Enabled: false
 
-LineLength:
+Style/IfUnlessModifier:
   Enabled: false
 
-Style/AsciiComments:
+Style/WhileUntilModifier:
   Enabled: false
 
-Style/ClassAndModuleChildren:
+Bundler/OrderedGems:
   Enabled: false
+Rails/OutputSafety:
+  Enabled: true
+  Exclude:
+    - 'app/helpers/**/*.rb'
 
-Style/StringLiterals:
+Rails/InverseOf:
   Enabled: false
-
-Layout/EmptyLinesAroundClassBody:
-  Enabled: false
-
-Layout/ExtraSpacing:
-  Enabled: false
-
-Layout/FirstHashElementIndentation:
-  Enabled: false
-
-Layout/SpaceInsideHashLiteralBraces:
-  Enabled: false
-
-Metrics/MethodLength:
-  Enabled: false
-
-Metrics/ClassLength:
-  Enabled: false
-
-Metrics/ModuleLength:
-  Enabled: false
-
-Metrics/AbcSize:
-  Max: 40
-
-FormatString:
-  EnforcedStyle: percent
-
-NumericLiterals:
-  Enabled: false
-
-Style/BracesAroundHashParameters:
-  Enabled: false
-
-Style/AndOr:
-  Enabled: false
-
-Style/GuardClause:
-  Enabled: false
-
-Style/MethodDefParentheses:
-  Enabled: false
-
-Style/RedundantReturn:
-  Enabled: false
-
-Style/TernaryParentheses:
-  Enabled: false
-
-DotPosition:
-  EnforcedStyle: trailing
