--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,6 +57,10 @@ jobs:
       - run:
           name: run rubocop
           command: bundle exec rubocop
+      # run rails_best_practice!
+      - run:
+          name: run rails_best_practices
+          command: bundle exec rails_best_practices
       # collect reports
       - store_test_results:
           path: /tmp/test-results
