--- a/config/settings.yml
+++ b/config/settings.yml
@@ -3,3 +3,7 @@ twitter:
   consumer_secret: <%= Rails.application.credentials.dig(:twitter, :consumer_secret) %>
   access_token: <%= Rails.application.credentials.dig(:twitter, :access_token) %>
   access_token_secret: <%= Rails.application.credentials.dig(:twitter, :access_token_secret) %>
+
+get_user_param:
+  num: 100
+  word: '駆け出しエンジニア'
