--- a/config/settings.yml
+++ b/config/settings.yml
@@ -5,5 +5,8 @@ twitter:
   access_token_secret: <%= Rails.application.credentials.dig(:twitter, :access_token_secret) %>
 
 get_user_param:
-  num: 100
+  num: 70
   word: '駆け出しエンジニア'
+
+aggregate_param:
+  get_follow_user_num: 3000
